# csgo-sdk-improved

./: .gdbinit  .gitattributes  .gitignore  CMakeLists.txt  README.md  csgo-sdk-improved.sln
csgo-sdk-improved/: csgo-sdk-improved.vcxproj  csgo-sdk-improved.vcxproj.filters
csgo-sdk-improved/dependencies/: changes.txt
csgo-sdk-improved/dependencies/freetype-2.12.1/builds/windows/vc2010/: freetype.vcxproj
csgo-sdk-improved/dependencies/funchook/src/: disasm.h
csgo-sdk-improved/dependencies/imgui/: imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_impl_sdl.cpp
csgo-sdk-improved/src/: .clang-format  defs.hpp
csgo-sdk-improved/src/api/: sdk_pointer.hpp
csgo-sdk-improved/src/api/hook/: chook.hpp
csgo-sdk-improved/src/api/module/: module.cpp  module.hpp
csgo-sdk-improved/src/config/: config.hpp
csgo-sdk-improved/src/entry/: entry.cpp  init.cpp
csgo-sdk-improved/src/hooks/: chook.hpp  hooks.cpp  hooks.hpp
csgo-sdk-improved/src/hooks/backend/: render.cpp
csgo-sdk-improved/src/hooks/backend/linux/: gl_graphic_hook.cpp  pre_graphic_hook.cpp  sdl_hook.cpp  vulkan_hook.cpp
csgo-sdk-improved/src/hooks/backend/platform/win32/: directx9_hook.cpp  wndproc_hook.cpp
csgo-sdk-improved/src/hooks/backend/win32/: directx9_hook.cpp  wndproc_hook.cpp
csgo-sdk-improved/src/logger/: logger.cpp  logger.hpp
csgo-sdk-improved/src/memory/: memory.cpp  memory.hpp
csgo-sdk-improved/src/memory/module/: module.cpp  module.hpp
csgo-sdk-improved/src/menu/: menu.cpp  menu.hpp
csgo-sdk-improved/src/menu/fonts/: cozette_bitmap.hpp
csgo-sdk-improved/src/sdk/: sdk.cpp  sdk.hpp
csgo-sdk-improved/src/sdk/classes/tier1/: interface.hpp
csgo-sdk-improved/src/sdk/interfaces/: iinputsystem.hpp  isurface.hpp  ivengineclient.hpp
csgo-sdk-improved/src/sdk/vmt/: vmt.cpp  vmt.hpp
csgo-sdk-improved/src/utils/: utils.cpp  utils.hpp
